# glium_surface_texture_poc

./: .gitmodules  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/gliumsurfacetexturepoc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/gliumsurfacetexturepoc/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/rust/surface_texture_glium/: .gitmodules  Cargo.toml  build.rs
app/src/main/rust/surface_texture_glium/src/: lib.rs
app/src/main/rust/surface_texture_glium/src/glium/: Cargo.toml
app/src/main/rust/surface_texture_glium/src/glium/src/backend/: mod.rs
app/src/main/rust/surface_texture_glium/src/glium/src/backend/surface_texture/: mod.rs
app/src/test/java/com/example/gliumsurfacetexturepoc/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
